usr/src/lib/libast/common/sfio/_sfputm.c
@@ -62,12 +62,19 @@ Sfulong_t	m;	/* the max value of the range */
 	{	switch(n)
 		{
 		case 8 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 7 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 6 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 5 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 4 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 3 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 2 : *ps++ = *s++;
+		/* FALLTHROUGH */
 		case 1 : *ps++ = *s++;
 		}
 		f->next = ps;
